--- a/TechMasterMainProgram/TechMasterMainProgram/dictionary.plist
+++ b/TechMasterMainProgram/TechMasterMainProgram/dictionary.plist
@@ -10,7 +10,7 @@
 			<key>club</key>
 			<string></string>
 			<key>picture</key>
-			<string></string>
+			<string>http://www.theplace2.ru/archive/andrey_arshavin/img/11_12_russiakitsadid-1.jpg</string>
 			<key>infomation</key>
 			<string></string>
 		</dict>
