--- a/TechMasterMainProgram/TechMasterMainProgram/dictionary.plist
+++ b/TechMasterMainProgram/TechMasterMainProgram/dictionary.plist
@@ -7,11 +7,13 @@
 		<dict>
 			<key>name</key>
 			<string>arshavin</string>
+			<key>age</key>
+			<string>34</string>
 			<key>club</key>
-			<string></string>
+			<string>FC Kuban Krasnodar</string>
 			<key>picture</key>
-			<string>http://www.theplace2.ru/archive/andrey_arshavin/img/11_12_russiakitsadid-1.jpg</string>
-			<key>infomation</key>
+			<string>https://upload.wikimedia.org/wikipedia/commons/5/52/Zenit-Legia_%281%29.jpg</string>
+			<key>des</key>
 			<string></string>
 		</dict>
 		<dict>
